work on styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <%= render 'shared/main_menu' %>
     </header>
 
-    <main class="mt5p5">
+    <main class="mt5p5 minhc">
       <div id="flash">
         <% flash.each do |key, value| -%>
           <div class="fixed z-9999 bg-light-gray ph4 pv3 flash-position br2" id="flash_<%= key %>"><%= h value %></div>
