--- a/app/views/invests/index.html.erb
+++ b/app/views/invests/index.html.erb
@@ -1,8 +1,8 @@
 <% if signed_in? %>
-  <div class="fl w-100 w-third-ns pa3 pr4">
-    <%= render 'shared/sidebar_dash' %>
+  <div class="fl w-100 w-third-l dn db-l pa3 pr4-m">
+    <%= render 'shared/sidebar_dash', user: current_user %>
   </div>
-  <div class="fl w-100 w-two-thirds-ns pa3">
+  <div class="fl w-100 w-two-thirds-l pa3">
 <% else %>
   <div class="fl w-100 pa3">
 <% end %>
