--- a/app/views/invests/shared/_invest_small.html.erb
+++ b/app/views/invests/shared/_invest_small.html.erb
@@ -1,8 +1,8 @@
-<div class="hover-grow card">
-  <div class="card-stacked">
-    <div class="card-content">
-      <span class="card-title"><%= invest.title %></span>
-      <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
-    </div>
+<div class="light-card-container">
+  <div class="light-card-body">
+    <h2 class="light-card-header"><%= invest.title %></h2>
+    <p><%= truncate invest.body, length: 200, separator: /\w+/ %></p>
+  </div>
+  <div class="light-card-footer-small">
   </div>
 </div>
