--- a/app/views/shared/_sidebar_dash.html.erb
+++ b/app/views/shared/_sidebar_dash.html.erb
@@ -1,20 +1,19 @@
-<div class="bg-white pa3 br2 fixed w-28 mw5 main-shadow">
-  <% if signed_in? %>
+<div class="bg-white pa3 br2 fixed-m fixed-l w-28-ns w-100-m w-100-l mw5-m mw5-l main-shadow">
     <div class="fl w-30">
-    <% if current_user.profile.avatar.attached? && current_user.profile.avatar.try(:image?) %>
-      <%= image_tag current_user.profile.avatar, alt: 'User Avatar' %>
+    <% if user.profile.avatar.attached? && user.profile.avatar.try(:image?) %>
+      <%= image_tag user.profile.avatar, alt: 'User Avatar' %>
     <% else %>
       <%= image_tag 'avatar_placeholder.png', alt: 'Placeholder Avatar' %>
     <% end %>
     </div>
     <div class="fl ml3">
-      <h3 class="ma2 ml0 white-text light-weight p-font"><%= current_user.profile.try(:full_name) %></h3>
-      <h3 class="ma2 ml0 white-text light-weight p-font"><%= current_user.username %></h3>
+      <h3 class="ma2 ml0 white-text light-weight p-font"><%= user.profile.try(:full_name) %></h3>
+      <h3 class="ma2 ml0 white-text light-weight p-font"><%= user.username %></h3>
     </div>
     <div class="cb mt6">
       <h3 class="bb r-font mb0">RECENT INVESTMENTS</h3>
       <ul class="list pl3">
-        <% current_user.invests.recent.each do |i| %>
+        <% user.invests.recent.each do |i| %>
           <li class="pt2"><h4 class="ma0 pa0 p-font"><%= link_to i.title, i %></h4></li>
         <% end %>
       </ul>
@@ -22,18 +21,17 @@
     <div class="mt4">
       <h3 class="bb r-font mb0">FOLLOWING INVESTMENTS</h3>
       <ul class="list pl3">
-        <% current_user.following_invests.recent.each do |i| %>
+        <% user.following_invests.recent.each do |i| %>
           <li class="pt2"><h4 class="ma0 pa0 p-font"><%= link_to i.title, i %></h4></li>
         <% end %>
       </ul>
     </div>
     <div class="mt4">
-      <h3 class="bb r-font mb0">YOUR TEAMS</h3>
+      <h3 class="bb r-font mb0">TEAMS</h3>
       <ul class="list pl3">
-        <% current_user.all_teams.each do |i| %>
+        <% user.all_teams.each do |i| %>
           <li class="pt2"><h4 class="ma0 pa0 p-font"><%= link_to i.name, i %></h4></li>
         <% end %>
       </ul>
     </div>
-  <% end %>
 </div>
