styles settings, teams, invites, adds border to menu

--- a/app/assets/stylesheets/components/forms.scss
+++ b/app/assets/stylesheets/components/forms.scss
@@ -35,3 +35,7 @@ textarea::placeholder {
 .main-input {
   @extend .f5, .h2, .ph2, .br1, .b--moon-gray;
 }
+
+.image-preview {
+  max-height: 210px;
+}
