--- a/app/views/activities/invites/new.html.erb
+++ b/app/views/activities/invites/new.html.erb
@@ -1,61 +1,39 @@
-<div class="row">
-  <div class="col s12">
-    <%= link_to 'cancel', team_path(@team), class: 'waves-effect waves-light btn btn-dark' %>
+<div class="dark-card-container center">
+  <div class="dark-card-body pb3">
+    <%= link_to 'cancel', team_path(@team), class: 'dark-button' %>
   </div>
 </div>
+<div class="dark-card-container center">
+  <div class="dark-card-body pb3">
+    <h2 class="dark-card-header">add member</h2>
+    <%= simple_form_for @invite, url: team_invites_path do |f| %>
+      <%= f.label :member_email, 'member email address', class: 'main-label' %>
+      <%= f.input :member_email, input_html: { class: 'main-input w-100', placeholder: 'user@example.com' }, label: false %>
 
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content overflow-auto">
-          <%= simple_form_for @invite, url: team_invites_path do |f| %>
-              <%= f.input :member_email, input_html: { class: 'validate' }, label: 'email' %>
+      <%= f.button :submit, class: 'dark-button mt2' %>
+    <% end %>
+  </div>
+</div>
+<div class="light-card-container center">
+  <div class="light-card-body pb3">
+    <h2 class="light-card-header r-font">pending invites</h2>
+    <% @team.activity_invites.pending.try(:each) do |invitee| %>
+      <span class="mh1">
+        <%= link_to invitee.user.username, user_path(invitee.user) %>
+        <%= link_to '(revoke)', team_invite_path(@team, invitee),
+                    data: {confirm: 'Are you sure you want to revoke this invite?'},
+                    method: :delete %>
 
-              <%= f.button :submit, value: 'send invite', class: 'btn-dark' %>
-          <% end %>
-        </div>
-      </div>
-    </div>
+      </span>
+    <% end %>
   </div>
 </div>
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content overflow-auto">
-          <h5 class="float-left p-1 mx-1">pending invites</h5>
-          <% @team.activity_invites.pending.try(:each) do |invitee| %>
-              <div class="team-user-list">
-                <h6>
-                  <%= link_to invitee.user.username, user_path(invitee.user) %>
-                  <%= link_to '(revoke)', team_invite_path(@team, invitee),
-                              data: {confirm: 'Are you sure you want to revoke this invite?'},
-                              method: :delete %>
-                </h6>
-              </div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content overflow-auto">
-          <h5 class="float-left p-1 mx-1">members of team</h5>
-          <% @team.members.each do |member| %>
-            <%= link_to user_path(member) do %>
-              <div class="team-user-list">
-                <h6><%= member.username %></h6>
-              </div>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-    </div>
+<div class="light-card-container center">
+  <div class="light-card-body pb3">
+    <h2 class="light-card-header r-font">members of team</h2>
+    <% @team.members.each do |member| %>
+      <span class="mh1"><%= link_to member.username, user_path(member) %></span>
+    <% end %>
   </div>
 </div>
 
