--- a/app/views/settings/passwords/edit.html.erb
+++ b/app/views/settings/passwords/edit.html.erb
@@ -1,37 +1,20 @@
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content bg-dark">
-
-          <div class="row no-margin">
-
-            <div class="col s3">
-              <ul class="list-reset settings-ul">
-                <%= link_to edit_settings_account_path, class: 'no-underline' do %>
-                  <li class="pa2 white-text cursor-pointer">account</li>
-                <% end %>
-                <%= link_to edit_settings_profile_path, class: 'no-underline' do %>
-                  <li class="pa2 white-text cursor-pointer">profile</li>
-                <% end %>
-                <li class="pa2 white-text">password</li>
-              </ul>
-            </div>
-
-            <div class="col s9 bg-white right-inner-card">
-              <h3 class="mt0 mb4"><%= t(".title") %></h3>
-              <%= simple_form_for @user, url: settings_password_url, method: :patch do |f| %>
-                <%= f.input :current_password, input_html: { class: 'validate' }, label: 'current password' %>
-                <%= f.input :new_password, input_html: { class: 'w-full-input' }, label: 'new password' %>
-                <%= f.button :submit, value: 'update password', class: 'btn-dark' %>
-              <% end %>
-            </div>
-
-          </div>
-
-        </div>
-
+<%= render 'settings/shared/settings_menu' %>
+<div class="dark-card-container mw7 center">
+  <div class="dark-card-body pb3">
+    <h2 class="dark-card-header"><%= t(".title") %></h2>
+    <%= simple_form_for @user, url: settings_password_url, method: :patch do |f| %>
+      <div class="full-width-form-group">
+        <%= f.label :current_password, 'current password', class: 'main-label' %>
+        <%= f.input :current_password, input_html: { class: 'main-input w-100' }, label: false %>
       </div>
-    </div>
+      <div class="full-width-form-group">
+        <%= f.label :new_password, 'new password', class: 'main-label' %>
+        <%= f.input :new_password, input_html: { class: 'main-input w-100' }, label: false %>
+      </div>
+      <div class="tr">
+        <%= f.button :submit, class: 'dark-button mt2' %>
+      </div>
+    <% end %>
   </div>
+
 </div>
