--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,51 +1,33 @@
 <% if @team.owner == current_user %>
-  <div class="row">
-    <div class="col s12">
-      <%= link_to 'edit', edit_team_path(@team), class: 'waves-effect waves-light btn btn-dark' %>
-      <%= link_to 'invite members', new_team_invite_path(@team), class: 'waves-effect waves-light btn btn-dark' %>
+  <div class="dark-card-container center">
+    <div class="dark-card-body pb3">
+      <%= link_to 'edit', edit_team_path(@team), class: 'dark-button' %>
+      <%= link_to 'invite members', new_team_invite_path(@team), class: 'ml2 dark-button' %>
     </div>
   </div>
 <% end %>
 
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content overflow-auto">
-          <h5><%= @team.name %></h5>
-          <h6>owner: <%= link_to @team.owner.username, user_path(@team.owner) %></h6>
-          <% if @team.links %>
-            <% unless @team.links["homepage"].blank? %>
-              <p>homepage: <%= link_to @team.links["homepage"], @team.links["homepage"] %></p>
-            <% end %>
-            <% unless @team.links["github"].blank? %>
-              <p>github: <%= link_to @team.links["github"], @team.links["github"] %></p>
-            <% end %>
-          <% end %>
-          <br>
-          <p><%= @team.description %></p>
-        </div>
-      </div>
-    </div>
+<div class="light-card-container center">
+  <div class="light-card-body">
+    <h2 class="light-card-header mb1"><%= @team.name %></h2>
+    <h4 class="light-card-header bn mt0">owner: <%= link_to @team.owner.username, user_path(@team.owner) %></h4>
+    <p class="p-font f5 pb3"><%= @team.description %></p>
+  </div>
+</div>
+<div class="light-card-container center">
+  <div class="light-card-body pb3">
+    <h2 class="light-card-header r-font">links</h2>
+    <% @team.links.try(:each) do |i| %>
+      <p class="ma1"><a href="<%= i.to_a[1] %>"><span class="f5"><%= '[' + i.to_a[0] + '] ' %> </span><%= i.to_a[1] %></a></p>
+    <% end %>
   </div>
 </div>
 
-<div class="row">
-  <div class="col s12">
-    <div class="card">
-      <div class="card-stacked">
-        <div class="card-content overflow-auto">
-          <h5 class="float-left p-1 mx-1">members of team</h5>
-          <% @team.members.each do |member| %>
-            <%= link_to user_path(member) do %>
-              <div class="team-user-list">
-                <h6><%= member.username %></h6>
-              </div>
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-    </div>
+<div class="light-card-container center">
+  <div class="light-card-body pb3">
+    <h2 class="light-card-header r-font">members of team</h2>
+    <% @team.members.each do |member| %>
+      <span class="mh1"><%= link_to member.username, user_path(member) %></span>
+    <% end %>
   </div>
 </div>
-
