--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,27 +1,16 @@
-<div class="row">
-  <div class="col s12">
-      <div class="card blue-grey">
-        <div class="card-content">
-          <span class="card-title white-text">notifications</span>
-        </div>
-        <div class="card-stacked">
-          <% unless @invitations.pending.blank? %>
-            <div class="card-content">
-              <span class="card-title white-text">invitations</span>
-              <% @invitations.pending.try(:each) do |invite| %>
-                <%= render 'activities/shared/invite_list', invite: invite %>
-              <% end %>
-            </div>
-          <% end %>
-          <% unless @notifications.pending.blank? %>
-            <div class="card-content">
-              <span class="card-title white-text">investment updates</span>
-              <% @notifications.pending.try(:each) do |notification| %>
-                <%= render 'activities/shared/notification_list', notification: notification %>
-              <% end %>
-            </div>
-          <% end %>
-        </div>
-      </div>
-  </div>
+<div class="mw7 center">
+  <h2 class="dark-card-header">notifications</h2>
 </div>
+<% if @invitations.pending.blank? && @notifications.pending.blank? %>
+  <h3 class="h-font tc">All caught up!</h3>
+<% end %>
+<% unless @invitations.pending.blank? %>
+  <% @invitations.pending.try(:each) do |invite| %>
+    <%= render 'activities/shared/invite_list', invite: invite %>
+  <% end %>
+<% end %>
+<% unless @notifications.pending.blank? %>
+  <% @notifications.pending.try(:each) do |notification| %>
+    <%= render 'activities/shared/notification_list', notification: notification %>
+  <% end %>
+<% end %>
