--- a/app/views/activities/shared/_notification_list.html.erb
+++ b/app/views/activities/shared/_notification_list.html.erb
@@ -1,17 +1,11 @@
-<div class="card">
-  <div class="card-stacked">
-    <div class="card-content">
-      <div class="row no-margin">
-        <div class="col s6">
-          <h6 class="no-margin"><%= notification.invest.title %> has been updated.</h6>
-        </div>
-        <div class="col s6 tr">
-          <%= link_to 'dismiss', activities_notification_path(notification, status: 'dismissed'),
-                      method: :put, class: 'waves-effect waves-light btn btn-dark mr4' %>
-          <%= link_to 'view', activities_notification_path(notification, {status: 'dismissed', view: 'true'}),
-                      method: :put, class: 'waves-effect waves-light btn btn-dark' %>
-        </div>
-      </div>
+<div class="dark-card-container mw7 center">
+  <div class="dark-card-body pb3 overflow-auto">
+    <h4 class="ma0 h-font w-50 fl"><%= notification.invest.title %> has been updated.</h4>
+    <div class="fr w-40 tr">
+      <%= link_to 'dismiss', activities_notification_path(notification, status: 'dismissed'),
+                  method: :put, class: 'dark-button' %>
+      <%= link_to 'view', activities_notification_path(notification, {status: 'dismissed', view: 'true'}),
+                  method: :put, class: 'dark-button' %>
     </div>
   </div>
 </div>
